# cfbfastR-cfb-raw

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: cfbfastR_cfb_data_trigger.yml  scrape_cfb_raw.yml
cfb/: cfb_schedule_master.parquet
python/: _cfb_raw_utils.py  cfb_betting.py  cfb_team_box_extra.py  reprocess_cfb_json.py  scrape_cfb_betting.py  scrape_cfb_game_rosters.py  scrape_cfb_json.py  scrape_cfb_officials.py  scrape_cfb_participants.py  scrape_cfb_power_index.py  scrape_cfb_qbr.py  scrape_cfb_rosters.py  scrape_cfb_schedules.py
python/cpoe/: FEASIBILITY.md  __init__.py  __main__.py  calibrate.py  cli.py  constants.py  cpoe.py  features.py  figures.py  ingest.py  inspect_cfbd_air_yards.py  loso.py  train.py  train_cp.py  validate.py
python/model_training/: HANDOFF.md  __init__.py  cli.py  constants.py  features.py  figures.py  fourth_down_decision.py  ingest.py  next_score.py  train_ep.py  train_qbr.py  train_wp.py  validate.py
python/pregame_wp/: __init__.py  __main__.py  box_score.py  cli.py  constants.py  data_ingest.py  data_prep.py  ep_curve.py  figures.py  five_factors.py  model.py  play_features.py  predict.py  talent.py  team_stats.py  training.py  validate.py  wp.py
python/rb_eval/: __init__.py  __main__.py  aggregate.py  cli.py  constants.py  features.py  figures.py  model.py  train.py  validate.py
scripts/: backfill_cfb.sh  daily_cfb_scraper.sh  reprocess_cfb.sh
tests/: conftest.py  test_betting.py  test_live_endpoints.py  test_refreshers.py  test_reprocess.py  test_schedules.py  test_scrape_json.py  test_team_box_extra.py  test_utils.py
tests/cpoe/: test_cli.py  test_cli_smoke.py  test_constants.py  test_cpoe.py  test_features.py  test_figures.py  test_ingest.py  test_loso.py  test_package.py  test_train_cp.py  (+1 more)
(+70423 files in other folders)
