[project]
name = "cfbfastr-cfb-raw"
version = "0.1.0"
description = "Scrapes ESPN college-football game JSON into raw + enriched final per-game files."
requires-python = ">=3.11"
dependencies = [
    "sportsdataverse>=0.0.59",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    "requests>=2.28",
    "tqdm>=4.66",
    "xgboost>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "joblib>=1.3"]
figures = ["plotnine>=0.13", "statsmodels>=0.14", "pillow>=10.0"]
gam = ["pygam>=0.9"]
pregame-wp = ["scipy>=1.10", "scikit-learn>=1.3"]

# NOTE: sportsdataverse>=0.0.59 (offline-reprocess features + game_rosters column-width
# fix; 0.0.52 raised polars ShapeError on diagonal-schema rosters) resolves from PyPI so CI's
# `uv sync --frozen` works on a clean runner. For local co-development against an unreleased
# sdv-py, run `uv pip install -e ../../sdv-py` after `uv sync` (do not re-add a path source
# to [tool.uv.sources] — it would break CI, which has no sibling checkout).

[tool.pytest.ini_options]
markers = ["live: hits the live ESPN API (gated by CFB_LIVE_TESTS=1)"]
testpaths = ["tests"]
pythonpath = ["python"]
